# Turntable-Tools

./: .gitignore  .upload.sh  README.md  boot_out.txt  code.py  settings.toml
desktop/: CMakeLists.txt  README.md
desktop/cmake/: dependencies.cmake
desktop/languages/: en.txt
desktop/source/: app_state.cpp  app_state.hpp  application.cpp  application.hpp  audio_data.cpp  audio_data.hpp  audio_window.cpp  audio_window.hpp  azimuth.cpp  azimuth.hpp  azimuth_window.cpp  azimuth_window.hpp  constants.hpp  fft.cpp  frequency_response.cpp  frequency_response.hpp  frequency_response_window.cpp  frequency_response_window.hpp  main.cpp  message_catalog.cpp  message_catalog.hpp  miniaudio.cpp  phase.hpp  thd.cpp  thd_window.cpp  thd_window.hpp  toolbar.hpp  tracking_ability.cpp  tracking_ability.hpp  turntable_tools.cpp  turntable_tools.hpp  turntable_tui.hpp
desktop/source/tools/: azimuth.cpp  azimuth.hpp  fft.cpp  fft.hpp  frequency_response.cpp  frequency_response.hpp  moving_avg.hpp  phase.cpp  thd.cpp  thd.hpp  tracking_ability.cpp  tracking_ability.hpp  turntable_tools.cpp  turntable_tools.hpp
desktop/test/: CMakeLists.txt
desktop/test/source/: TurntableTools_test.cpp  azimuth_test.cpp  frequency_response.cpp  frequency_response_test.cpp  phase_test.cpp  thd_test.cpp  tracking_ability_test.cpp
embedded/: README.md  code.py  enclosure.3mf
embedded/turntable_tools/: buttons.py  colors.py  helper.py  sd_card.py  strings.py  update_gui.py
embedded/turntable_tools/modes/: azimuth_mode.py  calibrate_mems_mode.py  level_mode.py
embedded/turntable_tools/screens/: __init__.py  about_screen.py  azimuth_screen.py  calibrate_mems_screen.py  debug_screen.py
embedded/turntable_tools/sensors/: battery_info.py
modules/: about_screen.py  adc_sensor.py  azimuth_mode.py  azimuth_screen.py  battery_icon.py  battery_info.py  battery_status.py  buttons.py  calibrate_mems_mode.py  calibrate_mems_screen.py  calibrate_mode.py  calibrate_screen.py  colors.py  debug_screen.py  display.py  helper.py  level_mode.py  level_screen.py  main_screen.py  mems_sensor.py  menu.py  menu_mode.py  menu_screen.py  mode.py  mode_level.py  mode_rpm.py  mode_rumble.py  modes.py  moving_average.py  rpm_mode.py  rpm_screen.py  rumble_mode.py  rumble_screen.py  screen.py  screen_level.py  screen_main.py  screen_rpm.py  strings.py  update_gui.py
turntable_tools/: __init__.py  battery_icon.py  buttons.py  display.py  helper.py  menu.py  mode_types.py  moving_average.py  strings.py
turntable_tools/modes/: __init__.py  azimuth_mode.py  calibrate_mems_mode.py  level_mode.py  rpm_mode.py  rumble_mode.py
turntable_tools/screens/: __init__.py  about_screen.py  azimuth_screen.py  calibrate_mems_screen.py  debug_screen.py  level_screen.py  menu_screen.py  rpm_screen.py  rumble_screen.py
turntable_tools/sensors/: __init__.py  adc_sensor.py  battery_info.py  mems_sensor.py
